<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_profile_title">
    <de.dennisguse.opentracks.settings.ImageViewPreference
        android:key="@string/settings_profile_profile_picture_key"
        android:layout="@layout/profile_picture_layout" />

    <EditTextPreference
        android:inputType="text"
        android:key="@string/settings_profile_nickname_key"
        android:title="@string/settings_profile_nickname"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:key="@string/settings_profile_country_key"
        android:title="@string/settings_profile_country"
        android:entries="@array/countries_array"
        android:defaultValue="@string/default_country_value"
        android:entryValues="@array/countries_array_values" />/>
</PreferenceScreen>